--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
               <!-- Estatísticas Timemania -->
             <tr>
               <td class="align-left">Estatísticas</td>
-              <td><a href="#"  target="_blank" disable>Resumo</a></td>
-              <td><a href="#"  target="_blank" disable>Quadrantes</a> </td>
-              <td><a href="#"  target="_blank" disable>Dígitos</a> </td>
+              <td><a href="#"  target="_blank" disable>Editar</a></td>
+              <td><a href="#"  target="_blank" disable>Editar</a> </td>
+              <td><a href="#"  target="_blank" disable>Editar</a> </td>
               <td><a href="#" target="_blank" disable>Editar</a></td>
               <td><a href="#" target="_blank" disable>Editar</a></td>
               <td><a href="#" target="_blank" disable>Editar</a></td>
