--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div style="overflow-x: auto;">
           <table>
             <tr>
-              <th>Timemania</th>
+              <th><a href="#" target="_blank" disable>TIMEMANIA</a></th>
               <th>I</th>
               <th>II</th>
               <th>III</th>
@@ -53,7 +53,7 @@
               <td class="align-left">Estatísticas</td>
               <td><a href="#"  target="_blank" disable>Editar</a></td>
               <td><a href="#"  target="_blank" disable>Editar</a> </td>
-              <td><a href="#"  target="_blank" disable>Editar</a> </td>
+              <td><a href="https://resultadosdigitostimemania.onrender.com/"  target="_blank" disable>Análise de Dígitos</a> </td>
               <td><a href="#" target="_blank" disable>Editar</a></td>
               <td><a href="#" target="_blank" disable>Editar</a></td>
               <td><a href="#" target="_blank" disable>Editar</a></td>
