--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <td class="align-left">Estatísticas</td>
               <td><a href="#"  target="_blank" disable>Editar</a></td>
               <td><a href="#"  target="_blank" disable>Editar</a> </td>
-              <td><a href="https://resultadosdigitostimemania.onrender.com/"  target="_blank" disable>Análise de Dígitos</a> </td>
+              <td><a href="https://resultadosdigitostimemania.onrender.com/"  target="_blank" enable>Análise de Dígitos</a> </td>
               <td><a href="#" target="_blank" disable>Editar</a></td>
               <td><a href="#" target="_blank" disable>Editar</a></td>
               <td><a href="#" target="_blank" disable>Editar</a></td>
